# apod-async-client

./: Cargo.toml  README.md
src/: client.rs  date.rs  lib.rs  model.rs
tests/: simple_test.rs
tests/data/: ok.json
