[package]
name = "apod_async_client"
version = "0.1.1"
authors = ["Alexandre Delattre <alexd6631@gmail.com>"]
edition = "2018"
repository = "https://github.com/alexd6631/apod-async-client"
description = "apod-async-client is a crate providing a simple client for NASA Astronomy Picture of the Day"
license = "MIT"

[dependencies]
serde = { version= "1.0", features=["derive"] }
thiserror = "1.0"
reqwest = { version="0.10", features=["json"] }
url = "2.1"

[dev-dependencies]
tokio= { version = "0.2", features = ["macros"] }
mockito="0.25"